[package]
name = "gameclient"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
env_logger = "0.9.0"
log = "0.4.14"

[build-dependencies]
# cross = { git = "https://github.com/rust-embedded/cross" }